--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "private": false,
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "dev": "node --expose-gc app.js",
+    "start": "node --expose-gc app.js",
+    "debug": "LOG_LEVEL=debug node --expose-gc app.js"
   },
   "dependencies": {
-    "axios": "^1.8.2"
+    "axios": "^1.9.0"
   },
   "engines": {
     "node": ">=16.0.0",
